# helloworld

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  AWS_ARCHITECTURE.md  AWS_ARCHITECTURE_SUMMARY.md  AWS_ENTERPRISE_PRODUCTION_ARCHITECTURE.md  CHAT_SEMANTIC_LAYER_DESIGN.md  COMPREHENSIVE_DOCUMENTATION.md  CONGRESS_PLAN.md  CONGRESS_TWIN_API_REFERENCE.md  DEPLOYMENT.md  PROJECT_LAYOUT.md  README.md  pyproject.toml  requirements.txt  run.sh  semantic_layer.malloy  setup.sh
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/planner/: page.tsx
frontend/components/: AppShell.tsx
frontend/components/planner/: AlertsDashboard.tsx  AttentionDashboard.tsx  ChatPanel.tsx  CongressTimeline.tsx  CriticalPathSection.tsx  DependencyLens.tsx  GanttChart.tsx  KanbanBoard.tsx  MilestoneLane.tsx  PlanContext.tsx  PlanOverviewCharts.tsx  PlanSelector.tsx  SyncButton.tsx  TaskCreateModal.tsx  TaskDetailPanel.tsx  TaskListTable.tsx  TemplateModal.tsx  ViewToggle.tsx  WorkstreamProgress.tsx
frontend/components/simulation/: CostBreakdown.tsx  CriticalPathVisualization.tsx  HistoricalInsights.tsx  MonteCarloResults.tsx  RiskHeatmap.tsx
frontend/lib/: congressTwinApi.ts
migrations/: 001_planner_tasks.sql  002_plan_sync_state.sql  003_planner_tasks_start_date.sql  004_expand_planner_fields.sql  004_external_events.sql  005_agent_proposed_actions.sql  005_planner_plans.sql  006_task_locks.sql  007_postgres_catchup.sql  README.md
scripts/: init_schema_postgres.sql  run_migrations.sh
src/congress_twin/: __init__.py  main.py
src/congress_twin/agents/: __init__.py
src/congress_twin/config/: __init__.py  settings.py
src/congress_twin/db/: __init__.py  events_repo.py  planner_repo.py
src/congress_twin/lifecycle/: __init__.py
src/congress_twin/scripts/: __init__.py  seed_congress_db.py
tests/: conftest.py  test_config.py
tests/api/: test_planner_api.py
tests/services/: test_graph_client.py  test_planner_simulated_data.py
(+32 files in other folders)
