[project]
name = "congress-twin"
version = "0.1.0"
description = "Congress Utility Bot / Digital Twin — Planner execution + OR/agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.25",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "networkx>=3.0",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
packages = ["src/congress_twin"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
